src/test/deca/context/invalid/method_redefinition_without_same_signature.deca
/*
    Description : Redefinition d'une methode sans la meme signature

    Résultat : erreur contextuelle (deca:9:4)
*/
class A{
    void x(int a){}
    
    void x(float a){}
}
// @expected_output deca:9:4

